# type4_online_sample

./: CMakeLists.txt  build.sh  config.json  release_README.md  release_tool.sh
helper/cmake/: color.cmake  function.cmake  linux-aarch64-gcc9.2.cmake  version.cmake
include/: BlockingQueue.h  data_trans.hpp  draw_helper.h  utils.h
src/: data_trans.cpp  draw_helper.cpp  type4_main.cpp  utils.cpp
